apps/bithabit-web/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: bithabit-web-svc
  namespace: default
spec:
  type: ClusterIP
  selector:
    app: bithabit-web
  ports:
    - port: 80
      targetPort: 80
      protocol: TCP
